5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1616_2943.log
== TEST (2019-04-01 14:07:17) 
-- CODE:
from math import *
d = float(input("tamanho da rosquinha"))
g = float(input("grossura da rosquinha"))
q = int(input("quantidade de rosquinhas"))
massa = (2 * pi ** 2 * d * r ** 2 * q)
print(round(massa, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    massa = (2 * pi ** 2 * d * r ** 2 * q)
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:07:20) 
-- CODE:
from math import *
d = float(input("tamanho da rosquinha"))
g = float(input("grossura da rosquinha"))
q = int(input("quantidade de rosquinhas"))
massa = (2 * pi ** 2 * d * r ** 2 * q)
print(round(massa, 2))
-- EXECUTION TIME:
0.196212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 5, in <module>
    massa = (2 * pi ** 2 * d * r ** 2 * q)
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:08:25) 
-- CODE:
from math import *
d = float(input("tamanho da rosquinha"))
g = float(input("grossura da rosquinha"))
q = int(input("quantidade de rosquinhas"))
massa = ((2 * (pi ** 2)) * (d * r ** 2) * q)
print(round(massa, 2))
-- EXECUTION TIME:
0.200096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 5, in <module>
    massa = ((2 * (pi ** 2)) * (d * r ** 2) * q)
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:08:38) 
-- CODE:
from math import *
d = float(input("tamanho da rosquinha"))
g = float(input("grossura da rosquinha"))
q = float(input("quantidade de rosquinhas"))
massa = ((2 * (pi ** 2)) * (d * r ** 2) * q)
print(round(massa, 2))
-- EXECUTION TIME:
0.170886
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 5, in <module>
    massa = ((2 * (pi ** 2)) * (d * r ** 2) * q)
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:11:42) 
-- CODE:
from math import *
d = float(input("tamanho da rosquinha"))
g = float(input("grossura da rosquinha"))
q = float(input("quantidade de rosquinhas"))
massa = (2*pi**2) * (d*g**2)*q
print(round(massa, 2))

-- EXECUTION TIME:
0.124457
-- TEST CASE 1:
---- input:
8.4
2.5
100
---- correct output:
103630.85
---- user output:
103630.85
-- TEST CASE 2:
---- input:
14.1
3.8
5
---- correct output:
20094.91
---- user output:
20094.91
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
